Moved some files in proper folders and created user domain

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -73,7 +73,7 @@
                         tracker</a>, we'll be happy to resolve your issue!
                 </p>
 
-                <h3>If you want to chat with contributors and other users</h3>
+                <h3>If you want to chat with contributors and other userEntities</h3>
                 <p>
                     Join our chat room on <a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">Gitter.im</a>.
                     Please note that this is a public chat room, and that we expect you to respect other people and write
